tests/ui/reachable/unreachable-code-ret.stderr
error: unreachable statement
  --> $SRC_DIR/std/src/macros.rs:LL:COL
   |
   = note: in this expansion of `println!`
  ::: $SRC_DIR/std/src/macros.rs:LL:COL
   |
   = note: unreachable statement
   |
  ::: $DIR/unreachable-code-ret.rs:6:5
   |
LL |       return;
   |       ------ any code following this expression is unreachable
LL |       println!("Paul is dead");
   |       ------------------------ in this macro invocation
   |
note: the lint level is defined here
  --> $DIR/unreachable-code-ret.rs:3:9
   |
LL | #![deny(unreachable_code)]
   |         ^^^^^^^^^^^^^^^^

error: aborting due to previous error

